# yfinance-timeframe-converter

./: .gitignore  README.md  setup.py  teste.csv  teste.pkl
tests/: get_all_timeframes.py  memory_leak_tests.py  tests.py  yfinance_outputs_test.py
tests/output/: .~lock.1m.csv#  .~lock.1wk.csv#  .~lock.2m.csv#  .~lock.90m.csv#  15m.csv  1d.csv  1h.csv  1m.csv  1mo.csv  1wk.csv  2m.csv  30m.csv  3mo.csv  5d.csv  5m.csv  60m.csv  90m.csv
yfinance_timeframe_changer/: __init__.py  checker.py  checkers.py  converter.py  format.py  masks.py  timeframe_changer.py  utils.py  yfinance_timeframe_changer.py
yfinance_timeframe_changer/checkers/: CMakeLists.txt  main.cpp  main.hpp
yfinance_timeframe_changer/checkers/src/: CMakeLists.txt  checker.cpp  checker.hpp
yfinance_timeframe_changer/converter/: main.cpp
yfinance_timeframe_changer/converter/src/: main.cpp
yfinance_timeframe_changer/src/converter/: converter.py
yfinance_timeframe_converter/: __init__.py  available_timeframes.py  converter_guide.txt  main.py  minhas_coisas.txt  timeframe_converter.py
yfinance_timeframe_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
yfinance_timeframe_converter/checker/: basic_checker.py  checker.py  return_error.py
yfinance_timeframe_converter/checker/module/win32/: CMakeLists.txt
yfinance_timeframe_converter/checker/module/win32/checkers/: CMakeLists.txt
yfinance_timeframe_converter/checkers/: basic_checker.py  checker.py  checkers.py  return_error.py
yfinance_timeframe_converter/checkers/module/module/: CMakeLists.txt  checker.hpp  columns.cpp  conversion.cpp  conversion.hpp  global_variables.cpp  timeframe_equal_dataframe.cpp  timeframe_exists.cpp  timeframe_lower.cpp  utils.cpp  utils.hpp
yfinance_timeframe_converter/checkers/module/module/includes/: global_variables.hpp
yfinance_timeframe_converter/checkers/module/module/src/: columns.cpp  global_variables.cpp  timeframe_lower.cpp
yfinance_timeframe_converter/converter/: converter.py
yfinance_timeframe_converter/converter/module/converters/: CMakeLists.txt
yfinance_timeframe_converter/converter/module/converters/includes/: utils.hpp  values.hpp
yfinance_timeframe_converter/converter/module/converters/src/: columns.cpp  global_variables.cpp  index.cpp  utils.cpp  values.cpp
yfinance_timeframe_converter/converter/module/linux/: CMakeLists.txt  main.cpp  main.hpp
yfinance_timeframe_converter/converter/module/linux/converters/includes/: columns.hpp  values.hpp
yfinance_timeframe_converter/converter/module/linux/module/: CMakeLists.txt  index.cpp  index.hpp
yfinance_timeframe_converter/formater/: formater.py
yfinance_timeframe_converter/utils/: utils.py
(+53 files in other folders)
